<resources>
    <string name="app_name">TMDroid</string>
    <string name="backdrop">Backdrop</string>
    <string name="poster">Poster</string>
    <string name="rating">%1$s 🌟 from %2$d votes</string>
    <string name="footer">TDP Batch 3 - Android Session</string>
    <string name="cta">Find Your Favorite Movie Here</string>
    <string name="search_movie">Search Movie</string>
    <string name="main_menu">Main Menu</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="err">Did not receive any movie data!</string>
    <string name="load_one_randomly">Would you like to load one randomly?</string>
    <string name="feeling_lucky">I\'m feeling lucky!</string>
    <string name="top_rated">Top Rated</string>
    <string name="zero_result">Empty result</string>
    <string name="search_result">Search Result for: %s</string>
    <string name="empty_query">Search query can\'t be empty!</string>
    <string name="default_error_message">Something went wrong</string>
    <string name="empty_favorite">You haven\'t favorite\'d any movie</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="toggle_favorite">Toggle Favorite</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="remove_from_favorite">Remove from Favorite</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="shared_prefs_key">tmdroid_prefs</string>
    <string name="is_logged_in_key">tmdroid_prefs_is_logged_in</string>
    <string name="logout">Log out</string>
    <string name="email_invalid">Not a valid email address</string>
    <string name="password_invalid">Password can not be blank</string>
    <string name="fave_d">Fave\'d</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="favorite">Favorite</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="tv_shows">TV Shows</string>
    <string name="on_the_air">On the Air</string>
    <string name="airing_today">Airing Today</string>
    <string name="people">People</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="movie_list_title">%1$s Movies</string>
    <string name="tv_list_title">%1$s TV Shows</string>
    <string name="profile">Profile</string>
    <string name="popular_people">Popular People</string>
    <string name="known_for">Known For</string>
    <string name="biography">Biography</string>
    <string name="loading_data">Loading Data</string>
    <string name="add_to_watch_list">Add to Watch List</string>
    <string name="remove_from_watch_list">Remove from Watch List</string>
    <string name="your_watch_list">Your Watch List</string>
    <string name="user_watch_list">Your Watch List, %1$s!</string>
    <string name="show_all">Show All</string>
    <string name="queue_removed">Removed from the watch list</string>
    <string name="queue_added">Added to the watch list</string>
    <string name="comment_section">Comment Section</string>
    <string name="write_review">Write Review</string>
    <string name="add_new_review">Add New Review</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="comment">Comment</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="name_invalid">Name can not be blank</string>
    <string name="comment_invalid">Comment invalid</string>
    <string name="edit_review">Edit Review</string>
    <string name="update">Update</string>
    <string name="tv_detail">TV Detail</string>
    <string name="failed_to_load_data">Failed to load data</string>
    <string name="try_again">Try Again</string>
    <string name="cause">Cause: %1$s</string>
    <string name="still_empty">Still Empty</string>
    <string name="no_result">No Result</string>
    <string name="password_incorrect">Password incorrect</string>
    <string name="register">Register</string>
    <string name="account_not_found">Account Not Found</string>
    <string name="register_first">Would you like to register it first?</string>
    <string name="welcome">Welcome, %1$s!</string>
    <string name="read_review">Read Review</string>
    <string name="sort_by">Sort By</string>
    <string name="most_recently">Most recently added</string>
    <string name="least_recently">Least recently added</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="movie_then_tv">Movie first, then TV</string>
</resources>
