<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.edts.tmdroid.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/to_movieListFragment"
            app:destination="@id/movieListFragment" />

    </fragment>

    <fragment
        android:id="@+id/movieListFragment"
        android:name="com.edts.tmdroid.ui.movie.list.MovieListFragment"
        android:label="@string/top_rated_movies"
        tools:layout="@layout/fragment_movie_list">

        <action
            android:id="@+id/to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />

    </fragment>

    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.edts.tmdroid.ui.movie.detail.MovieDetailFragment"
        android:label="@string/movie_detail"
        tools:layout="@layout/fragment_movie_detail" />

</navigation>
