<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svMediaDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBackdrop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/fade"
            android:contentDescription="@string/backdrop"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/avengers_bd" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPoster"
            android:layout_width="128dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvReleaseDate"
            app:layout_constraintDimensionRatio="2:3"
            app:layout_constraintStart_toStartOf="@id/ivBackdrop">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fade"
                android:contentDescription="@string/poster"
                tools:src="@drawable/avengers_poster" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cvPoster"
            app:layout_constraintTop_toBottomOf="@id/ivBackdrop"
            tools:text="Avengers: Endgame" />

        <TextView
            android:id="@+id/tvRating"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:text="8.3 🌟 from 123 votes" />

        <TextView
            android:id="@+id/tvReleaseDate"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvRating"
            tools:text="2019-04-24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnToggle"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:theme="@style/ButtonThemeOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvPoster"
            app:strokeColor="?attr/colorPrimary"
            tools:text="@string/add_to_favorite" />

        <TextView
            android:id="@+id/tvOverview"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="24dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/btnToggle"
            tools:ignore="VisualLintLongText"
            tools:text="@tools:sample/lorem/random" />

        <View
            android:id="@+id/vSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/fade"
            app:layout_constraintTop_toBottomOf="@id/tvOverview" />

        <TextView
            android:id="@+id/tvCommentSection"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/comment_section"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vSeparator" />

        <TextView
            android:id="@+id/tvWriteReview"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/write_review"
            android:textSize="13sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvCommentSection"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tvCommentSection"
            tools:itemCount="5"
            tools:listitem="@layout/item_review" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
