<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nsvPersonDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.person.detail.PersonDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fade"
            android:padding="16dp">

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/fade"
                android:contentDescription="@string/profile"
                app:layout_constraintDimensionRatio="2:3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.35" />

            <TextView
                android:id="@+id/tvName"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivProfile"
                app:layout_constraintTop_toTopOf="@id/ivProfile"
                tools:text="Jennifer Connelly" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingTop="14dp"
            android:paddingBottom="8dp"
            android:text="@string/biography"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvBio"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fade"
            android:padding="16dp" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingTop="14dp"
            android:paddingBottom="8dp"
            android:text="@string/known_for"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvKnownFor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fade"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_known_for" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
