<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@null"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/greyish"
            android:paddingHorizontal="16dp"
            android:paddingTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <TextView
                android:id="@+id/cta"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cta"
                android:textAlignment="center"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/search_movie"
                android:textColorHint="@android:color/darker_gray"
                app:boxStrokeColor="?attr/colorOnPrimary"
                app:endIconDrawable="@drawable/ic_search"
                app:endIconMode="custom"
                app:endIconTint="?attr/colorOnPrimary"
                app:hintTextColor="?attr/colorOnPrimary"
                app:layout_constraintTop_toBottomOf="@id/cta">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="?attr/colorOnPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/menu_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingBottom="48dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/search_field"
                app:spanCount="4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/footer"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp"
            android:text="@string/footer"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintTop_toBottomOf="@id/container" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
